eks-cluster-pvc/k8s/result-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
  namespace: 3tier-hagen
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
        - name: result
          image: 0098765/result-app:multiarch
          imagePullPolicy: Always
          ports:
            - containerPort: 80
