eks-cluster-pvc/k8s/vote-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  namespace: 3tier-hagen
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
        - name: vote
          image: 0098765/voting-app:multiarch
          imagePullPolicy: Always
          ports:
            - containerPort: 80
