eks-cluster-pvc/k8s/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: 3tier-hagen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: 0098765/worker-app:multiarch
          imagePullPolicy: Always
