eks-cluster-pvc/k8s/postgres-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: 3tier-hagen
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
  # type: ClusterIP
  clusterIP: None
