eks-cluster-pvc/k8s/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: 3tier-hagen
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
  # type: ClusterIP
  clusterIP: None
