eks-cluster-pvc/k8s/vote-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vote
  namespace: 3tier-hagen
spec:
  selector:
    app: vote
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
